module update from core change: change the way we store versioning and module info to package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "studiocoast-vmix",
-  "version": "0.0.1",
+  "version": "1.0.0",
+	"api_version": "1.0.0",
+	"keywords": [ "Software", "Vision Mixer" ],
+	"manufacturer": "StudioCoast",
+	"product": "vMix",
+	"shortname": "vmix",
   "description": "Module to control StudioCoast vMix",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "vmix"
-  ],
-  "author": "Per Røine",
+  "author": "Per Røine <per.roine@gmail.com>",
   "license": "MIT"
 }
