Indentation fixes version up minor

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "studiocoast-vmix",
-  "version": "1.0.0",
+	"name": "studiocoast-vmix",
+	"version": "1.0.1",
 	"api_version": "1.0.0",
-	"keywords": [ "Software", "Vision Mixer" ],
+	"keywords": [
+		"Software",
+		"Vision Mixer"
+	],
 	"manufacturer": "StudioCoast",
 	"product": "vMix",
 	"shortname": "vmix",
-  "description": "Module to control StudioCoast vMix",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Per Røine <per.roine@gmail.com>",
-  "license": "MIT"
+	"description": "Module to control StudioCoast vMix",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Per Røine <per.roine@gmail.com>",
+	"license": "MIT"
 }
