--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"api_version": "1.0.0",
 	"keywords": [
 		"Software",
@@ -14,6 +14,6 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Per Røine <per.roine@gmail.com>",
+	"author": "Per Røine <per.roine@gmail.com> & Andreas Thomsen <mc-hauge@hotmail.com>",
 	"license": "MIT"
 }
