--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Per Røine <per.roine@gmail.com> & Andreas Thomsen <mc-hauge@hotmail.com>",
+	"author": "Per Røine <per.roine@gmail.com>",
 	"license": "MIT"
 }
