--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "1.1.6",
+	"version": "1.2.0",
 	"api_version": "1.0.0",
 	"keywords": [
 		"Software",
@@ -10,10 +10,13 @@
 	"product": "vMix",
 	"shortname": "vmix",
 	"description": "Module to control StudioCoast vMix",
-	"main": "index.js",
+	"main": "src/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Per Røine <per.roine@gmail.com>",
+	"contributors": [
+		"Jeff Martin <dist@dist.dev>"
+	],
 	"license": "MIT"
 }
