--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
 	"contributors": [
 		"Jeff Martin <dist@dist.dev>"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"got": "^6.7.1",
+		"lodash": "^4.17.15",
+		"xml2js": "^0.4.22"
+	}
 }
