--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
 		"Andreas H. Thomsen <mc-hauge@hotmail.com>",
 		"Keith Rocheck <keith.rocheck@gmail.com>"
 	],
+	"homepage": "https://github.com/bitfocus/companion-module-studiocoast-vmix#readme",
 	"bugs": {
 		"url": "https://github.com/bitfocus/companion-module-studiocoast-vmix/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bitfocus/companion-module-studiocoast-vmix.git"
 	},
 	"lint-staged": {
 		"*.{js,json,md}": [
