--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "1.2.28",
+	"version": "2.0.0",
 	"api_version": "1.0.0",
 	"keywords": [
 		"Software",
@@ -10,20 +10,22 @@
 	"product": "vMix",
 	"shortname": "vmix",
 	"description": "Module to control StudioCoast vMix",
-	"main": "src/index.js",
+	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "yarn build:watch",
+		"build": "npx rimraf dist && npx typescript@~4.5.5 -p tsconfig.build.json",
+		"build:main": "tsc -p tsconfig.build.json",
+		"build:watch": "tsc -p tsconfig.build.json --watch",
+		"lint": "eslint . --ext .ts",
+		"postinstall": "yarn build",
+		"test": "jest"
 	},
-	"author": "Per Røine <per.roine@gmail.com>",
+	"author": "Jeff Martin <dist@dist.dev> (https://dist.dev)",
 	"contributors": [
-		"Jeff Martin <dist@dist.dev>",
-		"Andreas H. Thomsen <mc-hauge@hotmail.com>"
+		"Per Røine <per.roine@gmail.com>",
+		"Andreas H. Thomsen <mc-hauge@hotmail.com>",
+		"Keith Rocheck <keith.rocheck@gmail.com>"
 	],
-	"license": "MIT",
-	"dependencies": {
-		"lodash": "^4.17.21",
-		"xml2js": "^0.4.22"
-	},
 	"homepage": "https://github.com/bitfocus/companion-module-studiocoast-vmix#readme",
 	"bugs": {
 		"url": "https://github.com/bitfocus/companion-module-studiocoast-vmix/issues"
@@ -31,5 +33,41 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/bitfocus/companion-module-studiocoast-vmix.git"
+	},
+	"lint-staged": {
+		"*.{js,json,md}": [
+			"prettier --write",
+			"git add"
+		],
+		"*.{ts}": [
+			"yarn lint --fix --",
+			"git add"
+		]
+	},
+	"eslintIgnore": [
+		"/tests/*.test.ts"
+	],
+	"license": "MIT",
+	"dependencies": {
+		"lodash": "^4.17.21",
+		"xml2js": "^0.4.23"
+	},
+	"devDependencies": {
+		"@types/jest": "^27.4.0",
+		"@types/lodash": "^4.14.178",
+		"@types/node": "^17.0.12",
+		"@types/xml2js": "^0.4.9",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^8.7.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.4",
+		"jest": "^27.4.7",
+		"lint-staged": "^12.3.2",
+		"prettier": "^2.5.1",
+		"rimraf": "^3.0.2",
+		"ts-jest": "^27.1.3",
+		"typescript": "^4.5.5"
 	}
 }
