--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "2.1.3",
+	"version": "2.1.4",
 	"api_version": "1.0.0",
 	"keywords": [
 		"Software",
@@ -13,7 +13,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "yarn build:watch",
-		"build": "npx rimraf dist && npx typescript@~4.5.5 -p tsconfig.build.json",
+		"build": "npx rimraf dist && npx --package=typescript@~4.5.5 -c 'tsc -p tsconfig.build.json'",
 		"build:main": "tsc -p tsconfig.build.json",
 		"build:watch": "tsc -p tsconfig.build.json --watch",
 		"lint": "eslint . --ext .ts",
