--- a/package.json
+++ b/package.json
@@ -1,34 +1,14 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "2.1.2",
-	"api_version": "1.0.0",
-	"keywords": [
-		"Software",
-		"Vision Mixer"
-	],
-	"manufacturer": "StudioCoast",
-	"product": "vMix",
-	"shortname": "vmix",
-	"description": "Module to control StudioCoast vMix",
+	"version": "3.0.0",
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "yarn build:watch",
-		"build": "npx rimraf dist && npx typescript@~4.5.5 -p tsconfig.build.json",
+		"build": "rimraf dist && yarn build:main",
 		"build:main": "tsc -p tsconfig.build.json",
 		"build:watch": "tsc -p tsconfig.build.json --watch",
-		"lint": "eslint . --ext .ts",
-		"postinstall": "yarn build",
+		"lint": "eslint . --ext .ts --fix",
 		"test": "jest"
-	},
-	"author": "Jeff Martin <dist@dist.dev> (https://dist.dev)",
-	"contributors": [
-		"Per Røine <per.roine@gmail.com>",
-		"Andreas H. Thomsen <mc-hauge@hotmail.com>",
-		"Keith Rocheck <keith.rocheck@gmail.com>"
-	],
-	"homepage": "https://github.com/bitfocus/companion-module-studiocoast-vmix#readme",
-	"bugs": {
-		"url": "https://github.com/bitfocus/companion-module-studiocoast-vmix/issues"
 	},
 	"repository": {
 		"type": "git",
@@ -49,25 +29,27 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@types/lodash": "^4.14.178",
-		"@types/xml2js": "^0.4.9",
-		"lodash": "^4.17.21",
-		"xml2js": "^0.4.23"
+		"@companion-module/base": "~1.1.0",
+		"lodash": "~4.17.21",
+		"xml2js": "~0.4.23"
 	},
 	"devDependencies": {
-		"@types/jest": "^27.4.0",
-		"@types/node": "^17.0.12",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"eslint": "^8.7.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"husky": "^7.0.4",
-		"jest": "^27.4.7",
-		"lint-staged": "^12.3.2",
-		"prettier": "^2.5.1",
-		"rimraf": "^3.0.2",
-		"ts-jest": "^27.1.3",
-		"typescript": "^4.5.5"
+		"@companion-module/tools": "~0.5.2",
+		"@types/jest": "~29.2.3",
+		"@types/lodash": "~4.14.190",
+		"@types/node": "~18.11.9",
+		"@types/xml2js": "~0.4.11",
+		"@typescript-eslint/eslint-plugin": "~5.44.0",
+		"@typescript-eslint/parser": "~5.44.0",
+		"eslint": "~8.28.0",
+		"eslint-config-prettier": "~8.5.0",
+		"eslint-plugin-prettier": "~4.2.1",
+		"husky": "~8.0.2",
+		"jest": "~29.3.1",
+		"lint-staged": "~13.0.4",
+		"prettier": "~2.8.0",
+		"rimraf": "~3.0.2",
+		"ts-jest": "~29.0.3",
+		"typescript": "~4.9.3"
 	}
 }
