--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@companion-module/base": "~1.1.1",
+		"companion-module-utils": "^0.2.0",
 		"lodash": "~4.17.21",
 		"xml2js": "~0.5.0"
 	},
