--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "lib": ["es6", "es2019"],
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["src/*.ts"],
   "compileOnSave": false,
