--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@companion-module/base": "~1.1.1",
+		"@companion-module/base": "~1.4.1",
 		"companion-module-utils": "^0.2.0",
 		"lodash": "~4.17.21",
 		"xml2js": "~0.5.0"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "~1.0.0",
+		"@companion-module/tools": "^1.3.2",
 		"@types/jest": "~29.4.0",
 		"@types/lodash": "~4.14.190",
 		"@types/node": "~18.13.0",
