--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "3.4.3",
+	"version": "3.5.0",
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "yarn build:watch",
@@ -29,13 +29,13 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@companion-module/base": "~1.4.1",
+		"@companion-module/base": "~1.5.1",
 		"companion-module-utils": "^0.2.0",
 		"lodash": "~4.17.21",
 		"xml2js": "~0.5.0"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^1.3.2",
+		"@companion-module/tools": "~1.4.1",
 		"@types/jest": "~29.4.0",
 		"@types/lodash": "~4.14.190",
 		"@types/node": "~18.13.0",
@@ -52,5 +52,6 @@
 		"rimraf": "~3.0.2",
 		"ts-jest": "~29.0.5",
 		"typescript": "~4.9.5"
-	}
+	},
+	"packageManager": "yarn@4.0.0"
 }
