--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"devDependencies": {
 		"@companion-module/tools": "~1.4.1",
-		"@types/jest": "~29.4.0",
+		"@types/jest": "^29.5.12",
 		"@types/lodash": "~4.14.190",
 		"@types/node": "~18.13.0",
 		"@types/xml2js": "~0.4.11",
@@ -46,11 +46,11 @@
 		"eslint-config-prettier": "~8.6.0",
 		"eslint-plugin-prettier": "~4.2.1",
 		"husky": "~8.0.3",
-		"jest": "~29.4.2",
+		"jest": "^29.7.0",
 		"lint-staged": "~13.1.1",
 		"prettier": "~2.8.4",
 		"rimraf": "~3.0.2",
-		"ts-jest": "~29.0.5",
-		"typescript": "~4.9.5"
+		"ts-jest": "^29.1.2",
+		"typescript": "^5.4.3"
 	}
 }
