--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
 		"prettier": "~2.8.4",
 		"rimraf": "~3.0.2",
 		"ts-jest": "^29.1.2",
-		"typescript": "^5.4.3"
+		"typescript": "~4.9.5"
 	}
 }
