--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "rimraf dist && yarn build:main",
 		"build:main": "tsc -p tsconfig.build.json",
 		"build:watch": "tsc -p tsconfig.build.json --watch",
+		"build:test": "tsc -p tsconfig.build.json --noEmit",
 		"lint": "eslint . --ext .ts --fix",
 		"test": "jest"
 	},
