Workflow for module tests

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"build:watch": "tsc -p tsconfig.build.json --watch",
 		"build:test": "tsc -p tsconfig.build.json --noEmit",
 		"lint": "eslint . --ext .ts --fix",
+		"lint:test": "eslint . --ext .ts",
 		"test": "jest"
 	},
 	"repository": {
