--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "include": ["src/*.ts"],
   "compileOnSave": false,
