--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
         "@typescript-eslint/camelcase": "off",
         "@typescript-eslint/ban-ts-ignore": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-expressions": "off"
       }
     },
     {
