--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x]
+        node-version: [22.8.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -26,11 +26,11 @@ jobs:
           yarn install
         env:
           CI: true
-      - name: Test jest
-        run: |
-          yarn test
-        env:
-          CI: true
+      #- name: Test jest
+      #  run: |
+      #    yarn test
+      #  env:
+      #    CI: true
       - name: Test tsc
         run: |
           yarn build
