--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -26,11 +26,11 @@ jobs:
           yarn install
         env:
           CI: true
-      #- name: Test jest
-      #  run: |
-      #    yarn test
-      #  env:
-      #    CI: true
+      - name: Test jest
+        run: |
+          yarn test
+        env:
+          CI: true
       - name: Test tsc
         run: |
           yarn build
