--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "studiocoast-vmix",
-	"version": "3.7.0",
+	"version": "3.8.0",
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "yarn build:watch",
@@ -8,8 +8,8 @@
 		"build:main": "tsc -p tsconfig.build.json",
 		"build:watch": "tsc -p tsconfig.build.json --watch",
 		"build:test": "tsc -p tsconfig.build.json --noEmit",
-		"lint": "eslint . --ext .ts --fix",
-		"lint:test": "eslint . --ext .ts",
+		"lint": "eslint --fix",
+		"lint:test": "eslint",
 		"test": "jest"
 	},
 	"repository": {
@@ -26,33 +26,37 @@
 			"git add"
 		]
 	},
-	"eslintIgnore": [
-		"/tests/*.test.ts"
-	],
 	"license": "MIT",
+	"engines": {
+		"node": "^22.8"
+	},
 	"dependencies": {
-		"@companion-module/base": "~1.8.0",
+		"@companion-module/base": "~1.11.1",
 		"companion-module-utils": "^0.4.0",
 		"lodash": "~4.17.21",
-		"xml2js": "~0.5.0"
+		"xml2js": "~0.6.2"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "~1.4.1",
-		"@types/jest": "^29.5.12",
-		"@types/lodash": "~4.14.190",
-		"@types/node": "~18.13.0",
-		"@types/xml2js": "~0.4.11",
-		"@typescript-eslint/eslint-plugin": "~5.51.0",
-		"@typescript-eslint/parser": "~5.51.0",
-		"eslint": "~8.33.0",
-		"eslint-config-prettier": "~8.6.0",
-		"eslint-plugin-prettier": "~4.2.1",
-		"husky": "~8.0.3",
+		"@companion-module/tools": "^2.1.0",
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.15.0",
+		"@types/jest": "29.5.14",
+		"@types/lodash": "4.17.13",
+		"@types/node": "22.9.0",
+		"@types/xml2js": "0.4.14",
+		"@typescript-eslint/eslint-plugin": "^8.14.0",
+		"@typescript-eslint/parser": "^8.14.0",
+		"eslint": "^9.10.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-prettier": "5.2.1",
+		"globals": "^15.12.0",
+		"husky": "9.1.6",
 		"jest": "^29.7.0",
-		"lint-staged": "~13.1.1",
-		"prettier": "~2.8.4",
-		"rimraf": "~3.0.2",
-		"ts-jest": "^29.1.2",
-		"typescript": "~4.9.5"
+		"lint-staged": "15.2.10",
+		"prettier": "3.3.3",
+		"rimraf": "6.0.1",
+		"ts-jest": "29.2.5",
+		"typescript": "5.6.3",
+		"typescript-eslint": "^8.14.0"
 	}
 }
